# autonix-deps-kf5

./: .gitignore  .gitmodules  autonix-deps-kf5.cabal  default.nix  kf5-deps.hs  shell.nix
src/: KF5.hs  KF5Names.hs  kf5-deps.hs
src/Autonix/: KF5.hs
