name:                autonix-deps-kf5
version:             0.1.0.0
synopsis:            Automatically generate dependencies for kde-frameworks-5 Nix expressions
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           2014 Thomas Tuegel
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable kf5-deps
  main-is: kf5-deps.hs
  build-depends:
      base >=4.7 && <5
    , deps ==0.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010