name:                autonix-deps-kf5
version:             0.1.0.0
synopsis:            Generate dependencies for KDE 5 Nix expressions
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           2014 Thomas Tuegel
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Autonix.KF5
  build-depends:
      autonix-deps ==0.1.*
    , base >=4.7 && <5
    , bytestring >=0.10
    , containers >=0.5
    , filepath >=1.3
    , lens >=4.0
    , mtl >=2.1
    , transformers >=0.3
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable kf5-deps
  main-is: kf5-deps.hs
  build-depends:
      autonix-deps
    , autonix-deps-kf5
    , base
    , containers
    , lens
    , mtl
  default-language: Haskell2010
  ghc-options: -Wall